<resources>
    <string name="app_name">JoggingTrackerapp</string>
    <string name="jogging_times">Jogging Times</string>

    <string name="email">Email</string>
    <string name="pass">********</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="time">Time (min)</string>
    <string name="distance">Distance (m)</string>
    <string name="reset">Reset</string>

    <string name="no_users_to_update">No Users To Update</string>
    <string name="leave_empty_pass">** Leave password fields empty to keep the old password</string>
    <string name="no_reports">No Reports</string>
    <string name="week_">Week #</string>
    <string name="avg_speed">Avg. Speed: </string>
    <string name="m_min">m/min</string>
    <string name="m">m</string>
    <string name="min">min</string>
    <string name="dot">.</string>


    <string name="menu_add_item">Add</string>
    <string name="menu_add_time">Add Time</string>
    <string name="menu_add_user">Add User</string>
    <string name="menu_cancel_item">Cancel</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_reports">Reports</string>

    <string-array name="levels_array">
        <item>Admin</item>
        <item>Users Manager</item>
        <item>User</item>
    </string-array>
    <!-- Date/Time Shortcuts -->

    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tues">TUES</string>
    <string name="wed">WED</string>
    <string name="thurs">THURS</string>
    <string name="fri">FRI</string>

</resources>
