<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:joggingtrackerapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="10"
        android:title="@string/menu_add_item"
        joggingtrackerapp:showAsAction="always" />
    <item
        android:id="@+id/menu_filter_by_date"
        android:icon="@drawable/ic_menu_filter"
        android:orderInCategory="10"
        android:title="@string/menu_filter"
        joggingtrackerapp:showAsAction="never" />
    <item
        android:id="@+id/menu_reports"
        android:icon="@drawable/ic_action_ic_menu_report"
        android:orderInCategory="10"
        android:title="@string/menu_reports"
        joggingtrackerapp:showAsAction="never" />
</menu>